--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -7,14 +7,25 @@
     android:layout_width="wrap_content"
     android:id="@+id/myFlagImageView"
     android:layout_weight=".25"
+    android:layout_gravity="center"
     android:src="@drawable/indianflag"
     android:layout_height="wrap_content" />
-    <TextView
-        android:layout_gravity="center"
+<LinearLayout
+
+    android:layout_weight=".75"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">    <TextView
+
         android:text="India"
         android:layout_width="wrap_content"
         android:id="@+id/countryTV"
-        android:layout_weight=".75"
         android:layout_height="wrap_content" />
-
+    <TextView
+        android:text="Country of Rivers"
+        android:textSize="10sp"
+        android:layout_width="wrap_content"
+        android:id="@+id/txtDescTV"
+        android:layout_height="wrap_content" />
+</LinearLayout>
 </LinearLayout>
