--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -21,11 +21,20 @@
         android:layout_width="wrap_content"
         android:id="@+id/countryTV"
         android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
     <TextView
         android:text="Country of Rivers"
         android:textSize="10sp"
         android:layout_width="wrap_content"
         android:id="@+id/txtDescTV"
         android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/popTV"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
 </LinearLayout>
